Fix the grid so the tiles align properly
The grid wasn't displaying 16 tile rows by 16 tile columns before so
the javascript file and the css file had to be adjusted to make the
necessary calculations in order for the tiles to fit in the browser's
viewport properly.

--- a/style.css
+++ b/style.css
@@ -1,8 +1,20 @@
+html,
+body {
+    width: 100%;
+    height: 100%;
+}
+
 body {
     background-color: #0A0D0F;
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+    margin: 0;
 }
 
 .grid-container {
     display: flex;
     flex-wrap: wrap;
+    flex: 1 1 auto;
+    padding: 20px;
 }
